--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@storagestack/ipfs-provider",
+  "name": "@example/basic",
   "version": "1.0.0",
-  "description": "IPFS implementation as a storage provider for storage stack",
+  "description": "basic implementation and usage of storage stack",
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -10,15 +10,14 @@
     "tslint": "tslint --project src/tsconfig.json"
   },
   "keywords": [
-    "ipfs",
+    "localstorage",
     "storage",
-    "provider",
-    "blockchain"
+    "provider"
   ],
   "dependencies": {
     "@storagestack/core": "1.0.0",
-    "buffer": "^5.1.0",
-    "ipfs-js": "0.0.11"
+    "@storagestack/json-middleware": "1.0.0",
+    "@storagestack/ipfs-provider": "1.0.0"
   },
   "author": "Joris Hermans",
   "license": "ISC",
