improve the setup, so we can work with examples

--- a/lerna.json
+++ b/lerna.json
@@ -4,5 +4,12 @@
     "packages/*",
     "examples/*"
   ],
+  "commands": {
+    "publish": {
+      "ignore": [
+        "examples/*"
+      ]
+    }
+  },
   "version": "0.0.0"
 }
