--- a/packages/ipfs-provider/package.json
+++ b/packages/ipfs-provider/package.json
@@ -2,7 +2,7 @@
   "name": "@storagestack/ipfs-provider",
   "version": "1.0.0",
   "description": "IPFS implementation as a storage provider for storage stack",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "compile": "webpack",
@@ -23,6 +23,8 @@
   "author": "Joris Hermans",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.10.2"
+    "ts-loader": "^4.4.2",
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.8"
   }
 }
