--- a/packages/blockstack-provider/package.json
+++ b/packages/blockstack-provider/package.json
@@ -2,7 +2,7 @@
   "name": "@storagestack/blockstack-provider",
   "version": "1.0.0",
   "description": "Blockstack implementation as a provider for storage stack",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "jest",
     "compile": "webpack",
