--- a/packages/localstorage-provider/package.json
+++ b/packages/localstorage-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/localstorage-provider",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "LocalStorage implementation as a provider for storage stack",
   "main": "dist/index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "provider"
   ],
   "dependencies": {
-    "@storagestack/core": "0.1.0",
+    "@storagestack/core": "^0.1.1",
     "localforage": "^1.7.1"
   },
   "author": "Joris Hermans",
