--- a/packages/blockstack-provider/package.json
+++ b/packages/blockstack-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/blockstack-provider",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Blockstack implementation as a provider for storage stack",
   "main": "dist/index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "blockchain"
   ],
   "dependencies": {
-    "@storagestack/core": "^0.1.2",
+    "@storagestack/core": "^0.1.3",
     "blockstack": "^17.2.0"
   },
   "author": "Joris Hermans",
@@ -26,5 +26,8 @@
     "typescript": "^2.9.1",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.2"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
