--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/core",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "This package has the core functionality of the storage stack family",
   "main": "dist/index.js",
   "scripts": {
@@ -52,5 +52,8 @@
       "json",
       "node"
     ]
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
