--- a/packages/ipfs-provider/package.json
+++ b/packages/ipfs-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/ipfs-provider",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "IPFS implementation as a storage provider for storage stack",
   "main": "dist/index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "blockchain"
   ],
   "dependencies": {
-    "@storagestack/core": "^0.1.2",
+    "@storagestack/core": "^0.1.3",
     "ipfs": "0.30.0"
   },
   "author": "Joris Hermans",
@@ -25,5 +25,8 @@
     "ts-loader": "^4.4.2",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.8"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
