--- a/packages/json-middleware/package.json
+++ b/packages/json-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/json-middleware",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "To transform the data to json and from json in storage stack",
   "main": "dist/index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "blockchain"
   ],
   "dependencies": {
-    "@storagestack/core": "^0.1.2"
+    "@storagestack/core": "^0.1.3"
   },
   "author": "Joris Hermans",
   "license": "ISC",
@@ -24,5 +24,8 @@
     "ts-loader": "^4.4.2",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.1.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
