--- a/packages/localstorage-provider/package.json
+++ b/packages/localstorage-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/localstorage-provider",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "LocalStorage implementation as a provider for storage stack",
   "main": "dist/index.js",
   "scripts": {
@@ -15,7 +15,7 @@
     "provider"
   ],
   "dependencies": {
-    "@storagestack/core": "^0.1.2",
+    "@storagestack/core": "^0.1.3",
     "localforage": "^1.7.1"
   },
   "author": "Joris Hermans",
@@ -24,5 +24,8 @@
     "ts-loader": "^4.4.2",
     "webpack": "^4.10.2",
     "webpack-cli": "^3.0.8"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
