--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,9 @@
 {
   "packages": [
-    "packages/*",
-    "examples/*"
+    "examples/*",
+    "packages/*"
   ],
-  "version": "0.1.5",
+  "version": "0.1.6",
   "command": {
     "publish": {
       "ignoreChanges": [
