--- a/lerna.json
+++ b/lerna.json
@@ -1,14 +1,6 @@
 {
   "packages": [
-    "examples/*",
     "packages/*"
   ],
-  "version": "0.1.6",
-  "command": {
-    "publish": {
-      "ignoreChanges": [
-        "examples/*"
-      ]
-    }
-  }
+  "version": "0.0.0"
 }
