--- a/packages/localstorage-provider/package.json
+++ b/packages/localstorage-provider/package.json
@@ -21,9 +21,12 @@
   "author": "Joris Hermans",
   "license": "ISC",
   "devDependencies": {
-    "ts-loader": "^4.4.2",
+    "ts-jest": "^22.4.2",
+    "ts-loader": "^4.3.0",
+    "tslint": "^5.9.1",
+    "typescript": "^3.4.3",
     "webpack": "^4.10.2",
-    "webpack-cli": "^3.0.8"
+    "webpack-cli": "^3.3.10"
   },
   "publishConfig": {
     "access": "public"
