--- a/packages/blockstack-provider/package.json
+++ b/packages/blockstack-provider/package.json
@@ -27,6 +27,9 @@
     "webpack": "^4.10.2",
     "webpack-cli": "^3.3.10"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   }
