--- a/packages/localstorage-provider/package.json
+++ b/packages/localstorage-provider/package.json
@@ -29,6 +29,9 @@
     "webpack": "^4.10.2",
     "webpack-cli": "^3.3.10"
   },
+  "files": [
+    "dist"
+  ],
   "publishConfig": {
     "access": "public"
   }
