--- a/packages/blockstack-provider/tsconfig.json
+++ b/packages/blockstack-provider/tsconfig.json
@@ -4,6 +4,7 @@
         "sourceMap": true,          // allow sourcemap support
         "strictNullChecks": true,   // enable strict null checks as a best practice
         "declaration": true,
+        "allowSyntheticDefaultImports": true,
         "module": "commonjs",            // specify module code generation
         "target": "es5",            // specify ECMAScript target version
         "lib": [
