remove rxjs as a dependency in indexer middleware

--- a/packages/indexer-middleware/package.json
+++ b/packages/indexer-middleware/package.json
@@ -17,8 +17,7 @@
     "test": "__tests__"
   },
   "dependencies": {
-    "@storagestack/core": "^0.4.12",
-    "rxjs": "^6.5.2"
+    "@storagestack/core": "^0.4.12"
   },
   "devDependencies": {
     "ts-jest": "^22.4.2",
