--- a/packages/json-middleware/tsconfig.json
+++ b/packages/json-middleware/tsconfig.json
@@ -4,7 +4,8 @@
         "sourceMap": true,          // allow sourcemap support
         "strictNullChecks": true,   // enable strict null checks as a best practice
         "declaration": true,
-        "module": "commonjs",            // specify module code generation
+        "module": "es2015",
+        "moduleResolution": "node",
         "target": "es5",            // specify ECMAScript target version
         "lib": [
             "es2016"
