--- a/packages/localstorage-provider/package.json
+++ b/packages/localstorage-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/localstorage-provider",
-  "version": "0.6.0",
+  "version": "0.7.0-alpha.0",
   "description": "LocalStorage implementation as a provider for storage stack",
   "main": "dist/index.js",
   "scripts": {
