--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@storagestack/core",
+	  "name": "@storagestack/core",
   "version": "0.6.0",
   "description": "This package has the core functionality of the storage stack family",
   "main": "dist/index.js",
@@ -28,10 +28,10 @@
     "jest": "^22.4.3",
     "source-map-loader": "^0.2.3",
     "ts-jest": "^22.4.2",
-    "ts-loader": "^4.3.0",
+    "ts-loader": "4.3.0",
     "tslint": "^5.9.1",
-    "typescript": "^3.4.3",
-    "webpack": "^4.4.1",
+    "typescript": "^4.3.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.10"
   },
   "jest": {
