--- a/packages/webnative-provider/package.json
+++ b/packages/webnative-provider/package.json
@@ -11,8 +11,8 @@
   },
   "keywords": [
     "ipfs",
-	"webnative",
-	"wnfs",
+    "webnative",
+    "wnfs",
     "storage",
     "provider",
     "blockchain"
@@ -27,8 +27,9 @@
     "ts-jest": "^22.4.2",
     "ts-loader": "^4.3.0",
     "tslint": "^5.9.1",
-    "typescript": "^3.4.3",
-    "webpack": "^4.10.2",
+    "typescript": "^4.3.2",
+    "umd-compat-loader": "^2.1.2",
+    "webpack": "^4.46.0",
     "webpack-cli": "^3.3.10"
   },
   "files": [
