--- a/packages/stacks-provider/package.json
+++ b/packages/stacks-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/stacks-provider",
-  "version": "0.7.0-alpha.0",
+  "version": "0.7.0",
   "description": "Blockstack / Stacks storage implementation as a provider for storage stack",
   "main": "dist/index.js",
   "scripts": {
@@ -19,7 +19,7 @@
   "dependencies": {
     "@stacks/auth": "^1.0.0-beta.7",
     "@stacks/storage": "^1.0.0-beta.7",
-    "@storagestack/core": "^0.6.0"
+    "@storagestack/core": "^0.7.0"
   },
   "author": "Joris Hermans",
   "license": "ISC",
