--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -4,7 +4,7 @@
   "description": "This package has the core functionality of the storage stack family",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "npx jest --runInBand --detectOpenHandles --colors --verbose --reporters=default",
     "compile": "webpack",
     "tslint": "tslint --project src/tsconfig.json"
   },
@@ -12,7 +12,9 @@
     "blockstack",
     "storage",
     "transformation",
-    "blockchain"
+    "blockchain",
+    "decentralized",
+    "own your data"
   ],
   "author": "Joris Hermans",
   "license": "ISC",
@@ -24,29 +26,15 @@
   "devDependencies": {
     "@types/bluebird": "^3.5.20",
     "@types/core-js": "^0.9.46",
-    "@types/jest": "^22.2.3",
-    "jest": "^22.4.3",
+    "@types/jest": "^26.0.15",
+    "jest-junit": "^11.1.0",
+    "ts-jest": "^27.0.0-next.12",
     "source-map-loader": "^0.2.3",
-    "ts-jest": "^22.4.2",
     "ts-loader": "4.3.0",
     "tslint": "^5.9.1",
     "typescript": "^4.3.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.10"
-  },
-  "jest": {
-    "transform": {
-      "^.+\\.tsx?$": "ts-jest"
-    },
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
-    "moduleFileExtensions": [
-      "ts",
-      "tsx",
-      "js",
-      "jsx",
-      "json",
-      "node"
-    ]
   },
   "files": [
     "dist"
