--- a/packages/search-middleware/package.json
+++ b/packages/search-middleware/package.json
@@ -4,7 +4,7 @@
   "description": "To transform the data to json and from json in storage stack",
   "main": "dist/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "npx jest --runInBand --detectOpenHandles --colors --verbose --reporters=default",
     "compile": "webpack",
     "compile-test": "webpack --config webpack.config.test.js",
     "tslint": "tslint --project src/tsconfig.json"
@@ -22,7 +22,9 @@
   "author": "Joris Hermans",
   "license": "ISC",
   "devDependencies": {
-    "ts-jest": "^22.4.2",
+    "@types/jest": "^26.0.15",
+    "jest-junit": "^11.1.0",
+    "ts-jest": "^27.0.0-next.12",
     "ts-loader": "^4.3.0",
     "tslint": "^5.9.1",
     "typescript": "^4.3.2",
