--- a/packages/search-middleware/tsconfig.json
+++ b/packages/search-middleware/tsconfig.json
@@ -4,6 +4,7 @@
         "sourceMap": true,          // allow sourcemap support
         "strictNullChecks": true,   // enable strict null checks as a best practice
         "declaration": true,
+        "isolatedModules": true,
         "module": "es2015",
         "moduleResolution": "node",
         "target": "es5",            // specify ECMAScript target version
