--- a/packages/webnative-provider/package.json
+++ b/packages/webnative-provider/package.json
@@ -2,7 +2,8 @@
   "name": "@storagestack/webnative-provider",
   "version": "0.7.2",
   "description": "Fission webnative - implementation as a storage provider for storage stack",
-  "main": "dist/index.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/index.js",
   "scripts": {
     "compile": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
     "compile-test": "webpack --config webpack.config.test.js",
