--- a/packages/search-middleware/package.json
+++ b/packages/search-middleware/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@storagestack/search-middleware",
   "version": "0.7.5",
-  "description": "To transform the data to json and from json in storage stack",
-  "main": "dist/index.js",
+  "description": "To create a search index on files in storage stack",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/index.js",
   "scripts": {
+    "compile": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
     "test": "npx jest --runInBand --detectOpenHandles --colors --verbose --reporters=default",
-    "compile": "webpack",
-    "compile-test": "webpack --config webpack.config.test.js",
     "tslint": "tslint --project src/tsconfig.json"
   },
   "keywords": [
@@ -24,12 +24,9 @@
   "devDependencies": {
     "@types/jest": "^26.0.15",
     "jest-junit": "^11.1.0",
-    "ts-jest": "^27.0.0-next.12",
-    "ts-loader": "^4.3.0",
+    "ts-jest": "^26.4.1",
     "tslint": "^5.9.1",
-    "typescript": "^4.3.2",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^3.3.10"
+    "typescript": "^4.3.2"
   },
   "files": [
     "dist"
