--- a/packages/webnative-provider/package.json
+++ b/packages/webnative-provider/package.json
@@ -2,12 +2,13 @@
   "name": "@storagestack/webnative-provider",
   "version": "0.7.12",
   "description": "Fission webnative - implementation as a storage provider for storage stack",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/index.js",
+  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "typesVersions": {
     "*": {
-      "lib/index.d.ts": [
+      "dist/index.d.ts": [
         "dist/index.d.ts"
       ],
       "*": [
@@ -41,7 +42,7 @@
     "typescript": "^4.3.2"
   },
   "files": [
-    "dist",
+    "dist/",
     "readme.md",
     "README.md",
     "CHANGELOG.md",
