--- a/packages/localstorage-provider/package.json
+++ b/packages/localstorage-provider/package.json
@@ -2,11 +2,23 @@
   "name": "@storagestack/localstorage-provider",
   "version": "0.7.17",
   "description": "LocalStorage implementation as a provider for storage stack",
-  "main": "dist/index.js",
+  "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "dist/index.d.ts": [
+        "dist/index.d.ts"
+      ],
+      "*": [
+        "dist/*"
+      ]
+    }
+  },
   "scripts": {
     "test": "jest",
-    "compile": "webpack",
-    "compile-test": "webpack --config webpack.config.test.js",
+    "compile": "tsc -p tsconfig.json && tsc -p tsconfig-cjs.json",
     "tslint": "tslint --project src/tsconfig.json"
   },
   "keywords": [
@@ -21,15 +33,19 @@
   "author": "Joris Hermans",
   "license": "ISC",
   "devDependencies": {
-    "ts-jest": "^22.4.2",
-    "ts-loader": "^4.3.0",
+    "@types/jest": "^26.0.15",
+    "jest-junit": "^11.1.0",
+    "ts-jest": "^26.4.1",
     "tslint": "^5.9.1",
-    "typescript": "^4.3.2",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.10"
+    "typescript": "^4.3.2"
   },
   "files": [
-    "dist"
+    "dist/",
+    "readme.md",
+    "README.md",
+    "CHANGELOG.md",
+    "LICENSE",
+    "package.json"
   ],
   "publishConfig": {
     "access": "public"
