--- a/packages/indexer-middleware/package.json
+++ b/packages/indexer-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/indexer-middleware",
-  "version": "0.7.17",
+  "version": "0.8.0-alpha.0",
   "description": "create an index of your data type that you want to put in storage",
   "keywords": [
     "blockstack",
@@ -17,7 +17,7 @@
     "test": "__tests__"
   },
   "dependencies": {
-    "@storagestack/core": "^0.7.17"
+    "@storagestack/core": "^0.8.0-alpha.0"
   },
   "devDependencies": {
     "ts-jest": "^22.4.2",
