--- a/packages/ipfs-provider/package.json
+++ b/packages/ipfs-provider/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/ipfs-provider",
-  "version": "0.7.17",
+  "version": "0.8.0-alpha.0",
   "description": "IPFS implementation as a storage provider for storage stack",
   "main": "dist/index.js",
   "scripts": {
@@ -16,7 +16,7 @@
     "blockchain"
   ],
   "dependencies": {
-    "@storagestack/core": "^0.7.17"
+    "@storagestack/core": "^0.8.0-alpha.0"
   },
   "peerDependencies": {
     "ipfs": "0.55.3"
