--- a/packages/json-middleware/package.json
+++ b/packages/json-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/json-middleware",
-  "version": "0.7.17",
+  "version": "0.8.0-alpha.0",
   "description": "To transform the data to json and from json in storage stack",
   "type": "module",
   "main": "dist/cjs/index.js",
@@ -28,7 +28,7 @@
     "blockchain"
   ],
   "dependencies": {
-    "@storagestack/core": "^0.7.17"
+    "@storagestack/core": "^0.8.0-alpha.0"
   },
   "author": "Joris Hermans",
   "license": "ISC",
