--- a/packages/logging-middleware/package.json
+++ b/packages/logging-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/logging-middleware",
-  "version": "0.7.17",
+  "version": "0.8.0-alpha.0",
   "description": "Add logging for every operation in our storage stack",
   "main": "./dist/cjs/index.js",
   "module": "./dist/index.js",
@@ -15,7 +15,7 @@
     "blockchain"
   ],
   "dependencies": {
-    "@storagestack/core": "^0.7.17"
+    "@storagestack/core": "^0.8.0-alpha.0"
   },
   "author": "Joris Hermans",
   "license": "ISC",
