--- a/packages/search-middleware/package.json
+++ b/packages/search-middleware/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@storagestack/search-middleware",
-  "version": "0.7.17",
+  "version": "0.8.0-alpha.0",
   "description": "To create a search index on files in storage stack",
   "main": "./dist/cjs/index.js",
   "module": "./dist/index.js",
@@ -16,7 +16,7 @@
     "blockchain"
   ],
   "dependencies": {
-    "@storagestack/core": "^0.7.17",
+    "@storagestack/core": "^0.8.0-alpha.0",
     "@texthill/core": "^0.3.0"
   },
   "author": "Joris Hermans",
