--- a/package.json
+++ b/package.json
@@ -2,5 +2,8 @@
 	"devDependencies": {
 		"lerna": "^3.19.0"
 	},
-	"name": "storagestack"
+	"name": "storagestack",
+	"dependencies": {
+		"@types/minimatch": "^3.0.5"
+	}
 }
