--- a/packages/localstorage-provider/tsconfig.json
+++ b/packages/localstorage-provider/tsconfig.json
@@ -1,18 +1,17 @@
 {
     "compilerOptions": {
-        "outDir": "./dist/",        // path to output directory
-        "sourceMap": true,          // allow sourcemap support
-        "strictNullChecks": true,   // enable strict null checks as a best practice
+        "target": "es2015",                          /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
+        "module": "es2020",                     /* Specify module code generation: 'none', 'commonjs', 'amd', 'system', 'umd', 'es2015', 'es2020', or 'ESNext'. */
+        "strict": true,                           /* Enable all strict type-checking options. */
+        "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+        "forceConsistentCasingInFileNames": true,  /* Disallow inconsistently-cased references to the same file. */
+        "outDir": "dist",
         "declaration": true,
-        "module": "commonjs",            // specify module code generation
-        "target": "es5",            // specify ECMAScript target version
-        "esModuleInterop": true,
-        "allowSyntheticDefaultImports": true,
-        "lib": [
-            "es2016", "dom"
-        ]
+        "moduleResolution": "node",
+        "skipLibCheck": true
     },
     "include": [
         "./src/"
-    ]
+    ],
+    "exclude": ["node_modules", "node_modules/*", "**/*.spec.ts"]
 }
